--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
     "framer-motion": "^12.23.21",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
+    "mammoth": "^1.11.0",
     "next-themes": "^0.3.0",
+    "pdfjs-dist": "^5.4.149",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
